[package]
name = "synac"
description = "Synac client library for Rust"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/jD91mZM2/synac-rs"

[dependencies]
openssl   = "0.9"
rmp-serde = "0.13"

# All dependencies from common
serde        = "1.0"
serde_derive = "1.0"
