[package]
authors = ["jD91mZM2 <me@krake.one>"]
description = "Synac client library for Rust"
license-file = "LICENSE"
name = "synac"
repository = "https://github.com/jD91mZM2/synac-rs"
version = "0.3.1"

[dependencies]
failure = "0.1.1"
openssl = "0.9.23"
rmp-serde = "0.13.7"
serde = "1.0.21"
serde_derive = "1.0.21"
